--- a/pages/scan/scan.wxml
+++ b/pages/scan/scan.wxml
@@ -1,2 +1,11 @@
-<!--pages/scan/scan.wxml-->
-<text>pages/scan/scan.wxml</text>
+
+<!--
+<form bindsubmit="bindSubmit">
+  <textarea value="{{barcode}}" placeholder="barcode" class="box" name="barcode" maxlength="-1" auto-height />
+  <button class="submit-btn" style="margin-bottom:50px "type="primary" form-type="submit" loading="{{loading}}">Submit</button>
+</form>
+-->
+
+<view class="btn-area">
+ <button bindtap="bindScan">Scan</button>
+</view>
