--- a/pages/favorite/favorite.wxml
+++ b/pages/favorite/favorite.wxml
@@ -1,25 +1,48 @@
-<view class="header">
-<text>Favorites</text>
-</view>
+
+
+
+  <view class="header">Favorites</view>
+
+
+<!-- Top Header finish -->
 
 <!--logs.wxml
 <view wx:for="{{projects}}" wx:for-item="project" wx:key="project.id" bindtap="showProject" class="card" data-project-id="{{project.id}}">
 -->
-  
+
+<!-- card dual -->  
+
+<view class="card-dual">
   <view class="card-product">
     <view class="image">
-      <image src="https://picsum.photos/200/300" style="/*width;<view><br></view>:*/width: 155px;height: 155px;"></image> 
-      </view>
-    <view class="card-product-infos">
-      <view class="h2">Product Name</view>
-      <view class="p">Brand</view>
-      <view class="p">General Ranking</view>
+      <image src="https://picsum.photos/200/300" style="/*width;<view><br></view>:*/width: 100px;height: 100px;"></image> 
     </view>
-    <view>
-    <image class="smiley" src="/images/smiley-medium.png" style="/*width;<view><br></view>:*/width: 45px;height: 45px;"></image> 
+    <view class="info-n-smiley">
+      <view class="card-product-infos">
+        <view class="h2">Product Name</view>
+        <view class="p">Brand</view>
+        <view class="p">General Ranking</view>
+      </view>
+      <view class="smile">
+        <image class="smiley" src="/images/smiley-medium.png" style="/*width;<view><br></view>:*/width: 45px;height: 45px;"></image> 
+      </view>
     </view>
   </view>
-
-  <!--logs.wxml
+  <view class="card-product">
+    <view class="image">
+      <image src="https://picsum.photos/200/300" style="/*width;<view><br></view>:*/width: 100px;height: 100px;"></image> 
+    </view>
+    <view class="info-n-smiley">
+      <view class="card-product-infos">
+        <view class="h2">Product Name</view>
+        <view class="p">Brand</view>
+        <view class="p">General Ranking</view>
+      </view>
+      <view class="smile">
+        <image class="smiley" src="/images/smiley-medium.png" style="/*width;<view><br></view>:*/width: 45px;height: 45px;"></image> 
+      </view>
+    </view>
+  </view>
 </view>
--->
+
+<!-- card dual finsh--> 
