--- a/pages/profile/profile.wxss
+++ b/pages/profile/profile.wxss
@@ -19,7 +19,6 @@
 }
 
 .userinfo {
-
   display: flex;
   flex-direction: column;
   align-items: left;
@@ -31,24 +30,20 @@
   font-weight: bold;
 }
 .welcome {
-
   font-size: 15px;
 }
 
 .divider {
-
-  height: 22px;
+  height: 45rpx;
+  padding: 10rpx;
   background-color: #EA7B4C;
-  padding: 5px;
   color: white;
   font-weight: bold;
 }
 
 .header {
-
-  font-size:20px;
-  padding-left: 5px;
-  height: 100%;
+  font-size:40rpx;
+  padding-left: 15rpx;
 }
 
 
@@ -59,63 +54,59 @@
 
 .card-dual {
   display:flex;
-
-}
-
-.image {
-  margin-top: 15px;
-  text-align: center;
 }
 
 .card-product {
-
   overflow: hidden;
-  width: 50%;
-  height: 218px;
+  width: 400rpx;
+  height: 430rpx;
   background: white;
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
-  align-items: center;
-  margin: 10px;
+  box-shadow: 0 0 30rpx rgba(0,0,0,0.2);
+  padding: 20rpx;
+  margin: 20rpx;
+}
+
+.image {
+  margin: 30rpx;
+  text-align: center;
+}
+
+.product-img {
+  width: 200rpx;
+  height: 200rpx;
 }
 
 .h2 {
-  font-size: 16px;
+
+  font-size: 30rpx;
   font-weight: bold;
-  margin: 0;
+
 }
 
 .p {
-  font-size: 12px;
-  line-height: 1.4;
+
+  font-size: 25rpx;
   opacity: .7;
   margin-bottom: 0;
-  margin-top: 8px;
+  margin-top: 15rpx;
 }
 
 .card-product-infos {
-
-  margin-left: 10px;
+  margin-left: 30rpx;
 }
 
-.info-n-smiley {
+.classification {
+  
 
-  display:flex;
+  font-size: 25rpx;
+  opacity: .7;
 }
 
-.smile {
+.dot {
 
-  margin-left: 10px;
-}
-
-.smiley {
-
-  margin-top: 10px;
-
-}
-
-.title {
-
-
+  width: 30rpx;
+  height: 30rpx;
+  margin-left: 20rpx;
 }
 
 /* Finish Dual Card */
