--- a/pages/profile/profile.wxss
+++ b/pages/profile/profile.wxss
@@ -1,5 +1,4 @@
 /* Top Header  */
-
 .banner {
   color: white;
   text-align: center;
@@ -10,29 +9,24 @@
   align-items: center;
   justify-content: center;
 }
-
 .userinfo-avatar {
   width: 128rpx;
   height: 128rpx;
   margin: 20rpx;
   border-radius: 50%;
 }
-
 .userinfo {
   display: flex;
   flex-direction: column;
   align-items: left;
 }
-
 .userinfo-nickname {
-
   color: white;
   font-weight: bold;
 }
 .welcome {
   font-size: 15px;
 }
-
 .divider {
   height: 45rpx;
   padding: 10rpx;
@@ -40,73 +34,56 @@
   color: white;
   font-weight: bold;
 }
-
 .header {
   font-size:40rpx;
   padding-left: 15rpx;
 }
-
-
 /* finish Top Header */
-
-
 /* Dual card */
-
-.card-dual {
-  display:flex;
-}
-
 .card-product {
   overflow: hidden;
-  width: 400rpx;
-  height: 430rpx;
+  width: 290rpx;
+  height: 460rpx;
   background: white;
   box-shadow: 0 0 30rpx rgba(0,0,0,0.2);
   padding: 20rpx;
   margin: 20rpx;
 }
-
 .image {
   margin: 30rpx;
   text-align: center;
 }
-
 .product-img {
-  width: 200rpx;
-  height: 200rpx;
+  width: 195rpx;
+  height: 230rpx;
 }
-
 .h2 {
-
   font-size: 30rpx;
   font-weight: bold;
-
 }
-
 .p {
-
   font-size: 25rpx;
   opacity: .7;
   margin-bottom: 0;
   margin-top: 15rpx;
 }
-
-.card-product-infos {
-  margin-left: 30rpx;
-}
-
 .classification {
-  
-
   font-size: 25rpx;
   opacity: .7;
 }
-
+.card-product-infos {
+}
 .dot {
-
   width: 30rpx;
   height: 30rpx;
   margin-left: 20rpx;
 }
-
+.scan-container {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100vw;
+}
+.face-nutrient-protein {
+  width: 15rpx;
+}
 /* Finish Dual Card */
